--- a/portolio_other/style/style.css
+++ b/portolio_other/style/style.css
@@ -52,6 +52,24 @@ h1 {
     margin-top: 25px;
 }
 
+.countdown {
+    text-align: center;
+    color: #ffffff;
+}
+
+.countdown__title {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 150%;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    margin-top: 25px;
+}
+
+.count {
+    font-size: 25px;
+}
+
 .header-arrow{
     position: absolute;
     bottom: 0;
